# poisson-numcodecs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  tests.yaml
delta2D_numcodecs/: __init__.py
examples/: .gitignore  convert_F_and_F_neu.py  convert_movie.py  make_figure.py  make_figure_17.py  raster_calibration_and_compression.ipynb  replicate_paper_figure.py  sequential_calibration_and_lookup_compression.ipynb  workbook.ipynb
poisson_numcodecs/: Calibrate.py  Poisson.py  estimate.py
src/poisson_numcodecs/: Calibrate.py  Poisson.py  __init__.py  calibrate.py  calibrate_old.py  estimate.py  poisson.py
tests/: test_loaddata.py  test_poisson_calibrate.py  test_poisson_codec.py
