[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"

[project]
name = "poisson_numcodecs"
authors = [
  { name="Jerome Lecoq", email="jeromel@alleninstitute.org" },
]
description = "Numcodecs implementation of a poisson noise calibration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AllenNeuralDynamics/poisson-numcodecs"
Issues = "https://github.com/AllenNeuralDynamics/poisson-numcodecs/issues"