[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poisson_numcodecs"
version = "0.1.0"
authors = [
  { name="Jerome Lecoq", email="jeromel@alleninstitute.org" },
]
description = "Numcodecs implementation of a poisson noise calibration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AllenNeuralDynamics/poisson-numcodecs"
Issues = "https://github.com/AllenNeuralDynamics/poisson-numcodecs/issues"